// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exports > exports from index.ts 1`] = `
[
  "ActionButton",
  "AdminAction",
  "AdminComponent",
  "AdminContextKey",
  "AdminIcon",
  "AdminInstanceContextKey",
  "AdminModalKey",
  "AdminView",
  "BackendEndpoint",
  "LogLevel",
  "NotificationCategory",
  "NotificationContainer",
  "PdkAdmin",
  "PlainElement",
  "ReturnsForm",
  "ShipmentBarcode",
  "ShipmentOptionsForm",
  "ShipmentStatus",
  "Size",
  "Status",
  "StatusIndicator",
  "SubmitButton",
  "TabNavigation",
  "TriStateValue",
  "Variant",
  "createPdkAdmin",
  "generateFieldId",
  "getActionIdentifier",
  "modalCloseAction",
  "orderExportAction",
  "orderExportToShipmentsAction",
  "orderViewInBackofficeAction",
  "ordersEditAction",
  "ordersExportPrintShipmentsAction",
  "ordersFetchAction",
  "ordersPrintAction",
  "ordersUpdateAction",
  "shipmentsExportReturnAction",
  "shipmentsPrintAction",
  "shipmentsUpdateAction",
  "useActionStore",
  "useAdminConfig",
  "useAppInfo",
  "useCheckboxGroupContext",
  "useDropOffInputContext",
  "useDropdownData",
  "useElement",
  "useForm",
  "useFormatter",
  "useGlobalContext",
  "useGlobalPdkAdmin",
  "useInputWithOptionsContext",
  "useLanguage",
  "useModalContext",
  "useModalElementContext",
  "useModalStore",
  "useNotificationStore",
  "useOrderData",
  "useOrdersData",
  "useProductData",
  "useRadioGroupContext",
  "useSelectInputContext",
  "useTriStateInputContext",
  "useWeekdays",
  "webhooksDeleteAction",
]
`;

exports[`exports > exports from integrated.ts 1`] = `
[
  "ActionButton",
  "AdminAction",
  "AdminContextKey",
  "AdminInstanceContextKey",
  "AdminModalKey",
  "LogLevel",
  "NotificationContainer",
  "PlainElement",
  "ReturnsForm",
  "ShipmentBarcode",
  "ShipmentOptionsForm",
  "ShipmentStatus",
  "StatusIndicator",
  "SubmitButton",
  "TabNavigation",
  "generateFieldId",
  "getActionIdentifier",
  "modalCloseAction",
  "orderExportAction",
  "orderExportToShipmentsAction",
  "orderViewInBackofficeAction",
  "ordersEditAction",
  "ordersExportPrintShipmentsAction",
  "ordersFetchAction",
  "ordersPrintAction",
  "ordersUpdateAction",
  "shipmentsExportReturnAction",
  "shipmentsPrintAction",
  "shipmentsUpdateAction",
  "useActionStore",
  "useAdminConfig",
  "useAppInfo",
  "useCheckboxGroupContext",
  "useDropOffInputContext",
  "useDropdownData",
  "useElement",
  "useForm",
  "useFormatter",
  "useGlobalContext",
  "useInputWithOptionsContext",
  "useLanguage",
  "useModalContext",
  "useModalElementContext",
  "useModalStore",
  "useNotificationStore",
  "useOrderData",
  "useOrdersData",
  "useProductData",
  "useRadioGroupContext",
  "useSelectInputContext",
  "useTriStateInputContext",
  "useWeekdays",
  "webhooksDeleteAction",
  "AdminComponent",
  "AdminIcon",
  "AdminView",
  "BackendEndpoint",
  "NotificationCategory",
  "Size",
  "Status",
  "Variant",
  "TriStateValue",
  "ChildProductSettingsView",
  "ModalsView",
  "NotificationsView",
  "OrderBoxView",
  "OrderListItemView",
  "PluginSettingsView",
  "ProductSettingsView",
  "createPdkAdminPlugin",
  "useQueryStore",
  "useStoreQuery",
]
`;
